--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&family=Nunito+Sans:opsz,wght@6..12,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@700&family=Lobster+Two&family=Nunito+Sans:opsz,wght@6..12,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=IBM+Plex+Serif:wght@700&family=Lobster+Two&family=Nunito+Sans:opsz,wght@6..12,200&display=swap');
+@import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-solid-straight/css/uicons-solid-straight.css');
 
 .App{
   min-height: 100vh;
