--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,7 @@ p.animated {
   font-size: 40px;
   font-family: Hack, sans-serif;
   text-transform: uppercase;
+  margin-top: 6rem;
   background: linear-gradient(90deg, #000, #fff, #8f8888);
   letter-spacing: 5px;
   -webkit-background-clip: text;
@@ -42,4 +43,11 @@ p.animated {
   100% {
     background-position-x: 500%;
   }
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
